2003-03-17  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
	
	* src/cml.cpp: Fix unused declarations that cause problems with
	the xlC compiler reported by Markku Laukkanen.

	* src/pdb.cpp (WritePDB): Make sure strings are null-terminated
	and convert element name to upper-case for the column 77-78 entry.

2003-03-15  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/cacao.cpp (SetHilderbrandt): Fix one coredump found on
	roundtrip testing and add notes on what needs to be fixed for an
	iron-clad version of this.

	* src/hin.cpp (ReadHIN): Fix bugs uncovered in latest roundtrip
	testing. Some lines are exactly 11 tokens long and this should not
	stop the parsing.

	* src/viewmol.cpp (ReadViewMol): Remove loop attempting to find
	the first part of the file -- causes problems since two lines
	instead of one are read off the top.

2003-03-14  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* test/roundtrip.cpp: Detect cases where files have no atoms.

	* test/Makefile.in: Add targets to create roundtrip program.

	* src/cacao.cpp (ReadCaccrt): Add an obUnitCell object to the
	molecule for keeping track of unit cell data. Call
	ConnectTheDots() and PerceiveBondOrders().
	(WriteCaccrt): If obUnitCell data exists, output unit cell data.

	* src/dmol.cpp (ReadDMol): Read $cell vector section if it exists.
	(WriteDMol): Write unit cell data if it exists.

	* src/parsmi.cpp (ParseComplex): Add isotope information where
	available.
	(ParseSmiles): Fix segfault in test file caused
	by white-space character ending SMILES string. Ignore them and
	continue.
	
	* src/generic.cpp (OBUnitCell::ctor): Make sure to set the generic
	data type and string.

	* src/generic.h (OBUnitCell): Add space group storage as a string.

	* src/mopac.cpp (ReadMOPAC): Remove debugging output left
	inadvertantly.

2003-03-13  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/generic.cpp, src/generic.h: Add support for retrieving